Security: Remove hardcoded database credentials
 Security Improvements:
- Removed hardcoded passwords from all Python files
- Added config_template.py for secure configuration
- Updated .gitignore to exclude config.py and .env files
- Added TODO comments for credential updates
- Updated README with configuration instructions

 Files Updated:
- dashboard_app.py: Replaced hardcoded credentials with placeholder
- dashboard_safe.py: Replaced hardcoded credentials with placeholder
- data_importer.py: Replaced hardcoded credentials with placeholder
- file_uploader.py: Replaced hardcoded credentials with placeholder
- setup_database.py: Removed default password

 Files Added:
- config_template.py: Template for database configuration
- .gitignore: Updated to exclude sensitive files

This ensures database credentials are not exposed in the public repository while providing clear setup instructions for users.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Database configuration files (keep credentials secure)
+config.py
+.env
+
 # C extensions
 *.so
 
